--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <aside>
             <div class="toggle">
                 <div class="logo">
-                    <img src="images/logo.jpg" width="240" height="240" class="round">
+                    <img src="images/logo.jpg" width="540px" height="540px" class="round">
                     <h2>Entrils<span class="TitleColor">Production
 
                     </span></h2>
@@ -57,7 +57,7 @@
                         mail_outline
                     </span>
                     <h3>Тикеты</h3>
-                    <span class="message-count">27</span>
+                    <span class="message-count">15</span>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">
@@ -220,17 +220,16 @@
                     <span class="material-icons-sharp active">
                         light_mode
                     </span>
-                </div>
-                <div class="dark-mode">
                     <span class="material-icons-sharp">
                         dark_mode
                     </span>
                 </div>
+                    
 
                 <div class="profile">
                     <div class="info">
                         <p> Привет, <b>UserName</b></p>
-                        <small class"text-muted">Admin</small>
+                        <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
                         <img src="images/logo.jpg">
